// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/card/demo/basic.md correctly 1`] = `
<div
  class="ej-wingblank ej-wingblank-lg"
>
  <div
    class="ej-whitespace ej-whitespace-lg"
  />
  <div
    class="ej-card"
  >
    <div
      class="ej-card-header"
    >
      <div
        class="ej-card-header-content"
      >
        <img
          src="https://cloud.githubusercontent.com/assets/1698185/18039916/f025c090-6dd9-11e6-9d86-a4d48a1bf049.png"
        />
        This is title
      </div>
      <div
        class="ej-card-header-extra"
      >
        <span>
          this is extra
        </span>
      </div>
    </div>
    <div
      class="ej-card-body"
    >
      <div>
        This is content of \`Card\`
      </div>
    </div>
    <div
      class="ej-card-footer"
    >
      <div
        class="ej-card-footer-content"
      >
        footer content
      </div>
      <div
        class="ej-card-footer-extra"
      >
        <div>
          extra footer content
        </div>
      </div>
    </div>
  </div>
  <div
    class="ej-whitespace ej-whitespace-lg"
  />
</div>
`;

exports[`renders ./components/card/demo/full.md correctly 1`] = `
<div>
  <div
    class="ej-whitespace ej-whitespace-lg"
  />
  <div
    class="ej-card ej-card-full"
  >
    <div
      class="ej-card-header"
    >
      <div
        class="ej-card-header-content"
      >
        <img
          src="https://cloud.githubusercontent.com/assets/1698185/18039916/f025c090-6dd9-11e6-9d86-a4d48a1bf049.png"
        />
        This is title
      </div>
      <div
        class="ej-card-header-extra"
      >
        <span>
          this is extra
        </span>
      </div>
    </div>
    <div
      class="ej-card-body"
    >
      <div>
        This is content of \`Card\`
      </div>
    </div>
    <div
      class="ej-card-footer"
    >
      <div
        class="ej-card-footer-content"
      >
        footer content
      </div>
      <div
        class="ej-card-footer-extra"
      >
        <div>
          extra footer content
        </div>
      </div>
    </div>
  </div>
</div>
`;
